--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -27,7 +27,7 @@
     <!-- <a *ngIf="mostrarTab3===true" (click)="navigateTo('inventario')" class="w3-bar-item w3-button">
       <i class='fas fa-briefcase'></i> &nbsp; Inventario
     </a> -->
-    <a *ngIf="mostrarTab3===true" (click)="navigateTo('administracion')" class="w3-bar-item w3-button">
+    <!-- <a *ngIf="mostrarTab3===true" (click)="navigateTo('administracion')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Administración academica
     </a>
      <a *ngIf="mostrarTab3===true" (click)="navigateTo('adminacademica')" class="w3-bar-item w3-button">
@@ -43,7 +43,7 @@
       <i class='fas fa-users'></i> &nbsp; administración Usuarios
     </a>
   </div>
-  
+   -->
   <div class="w3-container" [class.open]="isSidebarOpen">
     <main class="content">
       <router-outlet></router-outlet>
