--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -27,23 +27,23 @@
     <!-- <a *ngIf="mostrarTab3===true" (click)="navigateTo('inventario')" class="w3-bar-item w3-button">
       <i class='fas fa-briefcase'></i> &nbsp; Inventario
     </a> -->
-    <!-- <a *ngIf="mostrarTab3===true" (click)="navigateTo('administracion')" class="w3-bar-item w3-button">
+    <a *ngIf="mostrarTab1===true" (click)="navigateTo('administracion')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Administración academica
     </a>
-     <a *ngIf="mostrarTab3===true" (click)="navigateTo('adminacademica')" class="w3-bar-item w3-button">
+     <a *ngIf="mostrarTab1===true" (click)="navigateTo('adminacademica')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Administración del sitio web
     </a>
        <a *ngIf="mostrarTab1===true" (click)="navigateTo('profesores')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Docentes asignación
     </a>
-          <a *ngIf="mostrarTab2===true" (click)="navigateTo('estudiantes')" class="w3-bar-item w3-button">
+          <a *ngIf="mostrarTab1===true" (click)="navigateTo('estudiantes')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Estudiantes
     </a>
-    <a *ngIf="mostrarTab3===true" (click)="navigateTo('usuarios')" class="w3-bar-item w3-button">
+    <a *ngIf="mostrarTab1===true" (click)="navigateTo('usuarios')" class="w3-bar-item w3-button">
       <i class='fas fa-users'></i> &nbsp; administración Usuarios
     </a>
   </div>
-   -->
+  
   <div class="w3-container" [class.open]="isSidebarOpen">
     <main class="content">
       <router-outlet></router-outlet>
